Fix the color of the modal window on dark mode

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -138,6 +138,6 @@
 
     // Modal
     .modal__container {
-        background-color: lighten($darkhigh, 15) !important;
+        background-color: lighten($darkhigh, 5) !important;
     }
 }
